[package]
name = "pareto-hockey-populate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.12", features =["json", "multipart"]}

chrono = {"0.4", features=["serde"]}

serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

tokio = {version = "1", features = ["full"]}

